--- a/assets/CSS/globals.css
+++ b/assets/CSS/globals.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');
 
+:root {
+  --background: hsl(185, 75%, 39%);
+  --text-color: hsl(227, 10%, 46%);
+  --black: hsl(0, 0%, 0%);
+  --white: hsl(0, 0%, 100%);
+}
+
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Kumbh Sans', sans-serif;
   background-color: hsl(185, 75%, 39%);
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-size: 18px;
 }
