--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,41 +1,57 @@
-:root {
-  --background: hsl(185, 75%, 39%);
-  --text-color: hsl(227, 10%, 46%);
-  --black: hsl(0, 0%, 0%);
-  --white: hsl(0, 0%, 100%);
+hr {
+  width: 100%;
 }
 
 .container {
-  background-color: var(--white);
-  border-radius: 12px;
-  text-align: center;
-  max-width: 350px;
-  width: 100%;
-  padding: 3rem 1.5rem;
-}
-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: block;
-  margin: 0 auto 1.5rem;
-}
-
-strong {
-  color: var(--text-color);
-  font-size: 1.5rem;
-  margin: 0 0.5rem;
-}
-
-p {
-  color: var(--text-color);
-}
-
-.perfil {
-  border-bottom: 1px solid var(--text-color);
-}
-.status {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
-  margin: 1rem 0;
+  gap: 25px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 20px;
+  width: 330px;
+  height: 350px;
+}
+
+.card .profile-informations {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  height: 100%;
+}
+
+.card .profile-informations img {
+  border-radius: 50%;
+  margin-top: 20px;
+}
+
+.card .profile-numbers {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.profile-numbers .info .counter,
+.card .profile-informations p {
+  font-weight: 700;
+}
+
+.card .profile-informations .age,
+.card .profile-informations .city,
+.profile-numbers .info .counter-type {
+  color: var(--text-color);
 }
